client_crash.txt
  File "D:\VIT VELLORE\Academics\SET_PROJECT\Fed-Breath\client.py", line 137
    total_rqi    = 0.0
    ^^^^^^^^^
SyntaxError: expected 'except' or 'finally' block
